# rpi-media-app

./: .env.example  .gitignore  CLAUDE.md  FILMES_VOVO.md  FIRETV.md  Makefile  README.md  chromecast_checker.py  config.toml  get_current_media_info.py  mute_before_dawn.py  play_sessao_da_tarde.py  prod.crontab  pyproject.toml  rpimedia.service  setup_supabase.py  supabase_schema.sql
rpimedia/: cli.py  controller.py  devices.py  event_bus.py  helpers.py  httpserver.py  input_listener.py  ipc_listener.py  playlog.py
tests/: test_is_playing.py  test_playlist.py
