[project]
name = "rpimedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioconsole>=0.8.1",
    "catt>=0.12.13",
    "click>=8.1.8",
    "evdev>=1.7.0",
]

[project.scripts]
rpimedia = "rpimedia.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpimedia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright[nodejs]>=1.1.396",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
